# fujin

./: Cargo.toml  README.md
src/: main.rs  proxy.rs  static_files.rs
static/: 404.html  debug.html  index.html
